--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,27 +1,51 @@
-name: Playwright Tests
+name: Automate Clockin Clockout
 on:
+  workflow_dispatch:
+  schedule:
+    - cron: '25 08 * * 1-5'
+    - cron: '01 17 * * 1-5'
   push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
+    branches: [ main ]
 jobs:
-  test:
+  clockin:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
+      if:github.events.schedule == '25 08 * * 1-5'
       with:
         node-version: lts/*
     - name: Install dependencies
       run: npm ci
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
-    - name: Run Playwright tests
-      run: npx playwright test
+    - name: Run clockin
+      run: npm run clockin
     - uses: actions/upload-artifact@v4
       if: always()
       with:
         name: playwright-report
         path: playwright-report/
-        retention-days: 30
+        retention-days: 1
+  clockout:
+    timeout-minutes: 60
+    on: ubuntu-latest
+        steps:
+        - uses: actions/checkout@v4
+        - uses: actions/setup-node@v4
+          if:github.events.schedule == '31 17 * * 1-5'
+          with:
+            node-version: lts/*
+        - name: Install dependencies
+          run: npm ci
+        - name: Install Playwright Browsers
+          run: npx playwright install --with-deps
+        - name: Run clockout
+          run: npm run clockout
+        - uses: actions/upload-artifact@v4
+          if: always()
+          with:
+            name: playwright-report
+            path: playwright-report/
+            retention-days: 1
