--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,9 +1,9 @@
 name: Automate Clockin Clockout
 on:
-  workflow_dispatch:
-  schedule:
-    - cron: '25 08 * * 1-5'
-    - cron: '01 17 * * 1-5'
+  # workflow_dispatch:
+  # schedule:
+    # - cron: '25 08 * * 1-5'
+    # - cron: '01 17 * * 1-5'
   push:
     branches: [ main ]
 jobs:
@@ -13,7 +13,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
-      if:github.events.schedule == '25 08 * * 1-5'
+      # if: github.events.schedule == '25 08 * * 1-5'
       with:
         node-version: lts/*
     - name: Install dependencies
@@ -34,7 +34,7 @@ jobs:
         steps:
         - uses: actions/checkout@v4
         - uses: actions/setup-node@v4
-          if:github.events.schedule == '31 17 * * 1-5'
+          # if: github.events.schedule == '31 17 * * 1-5'
           with:
             node-version: lts/*
         - name: Install dependencies
