--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -6,6 +6,11 @@ on:
     # - cron: '01 17 * * 1-5'
   push:
     branches: [ main ]
+
+env:
+  USERNAME: ${{ secrets.USERNAME }}
+  PASSWORD: ${{ secrets.PASSWORD }}
+
 jobs:
   clockin:
     timeout-minutes: 60
