--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "clockin": "playwright test clockin.spec.ts",
     "clockout": "playwright test clockout.spec.ts",
     "record-test": "npx playwright codegen --geolocation='-6.23027,-6.23027' https://account.mekari.com/users/sign_in?client_id=TAL-73645&return_to=L2F1dGg_Y2xpZW50X2lkPVRBTC03MzY0NSZyZXNwb25zZV90eXBlPWNvZGUmc2NvcGU9c3NvOnByb2ZpbGU%3D#!"
-  },  
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.43.1",
-    "@types/node": "^20.12.8"
+    "@types/node": "^20.12.8",
+    "dotenv": "^16.4.5"
   }
 }
