--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -6,11 +6,14 @@ on:
     # - cron: '01 17 * * 1-5'
   push:
     branches: [ main ]
-
-env:
-  USERNAME: ${{ secrets.USERNAME }}
-  PASSWORD: ${{ secrets.PASSWORD }}
-
+name: create .env file
+run: |
+      - name: 'Create env file'
+        run: |
+          touch .env
+          echo "${{ secrets.ENV }}" > .env
+          cat .env
+          
 jobs:
   clockin:
     timeout-minutes: 60
