--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -8,32 +8,32 @@ on:
     branches: [ main ]
           
 jobs:
-  clockin:
-    timeout-minutes: 60
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-node@v4
-      # if: github.events.schedule == '25 08 * * 1-5'
-      with:
-        node-version: lts/*
-    - name: create .env file
-      run: |
-          touch .env
-          echo "${{ secrets.ENV }}" > .env
-          cat .env
-    - name: Install dependencies
-      run: npm ci
-    - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
-    - name: Run clockin
-      run: npm run clockin
-    - uses: actions/upload-artifact@v4
-      if: always()
-      with:
-        name: playwright-report
-        path: playwright-report/
-        retention-days: 1
+  # clockin:
+  #   timeout-minutes: 60
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - uses: actions/checkout@v4
+  #   - uses: actions/setup-node@v4
+  #     # if: github.events.schedule == '25 08 * * 1-5'
+  #     with:
+  #       node-version: lts/*
+  #   - name: create .env file
+  #     run: |
+  #         touch .env
+  #         echo "${{ secrets.ENV }}" > .env
+  #         cat .env
+  #   - name: Install dependencies
+  #     run: npm ci
+  #   - name: Install Playwright Browsers
+  #     run: npx playwright install --with-deps
+  #   - name: Run clockin
+  #     run: npm run clockin
+  #   - uses: actions/upload-artifact@v4
+  #     if: always()
+  #     with:
+  #       name: playwright-report-clockin
+  #       path: playwright-report/
+  #       retention-days: 1
   clockout:
     timeout-minutes: 60
     runs-on: ubuntu-latest
@@ -53,10 +53,10 @@ jobs:
         - name: Install Playwright Browsers
           run: npx playwright install --with-deps
         - name: Run clockout
-          run: npm run clockout
+          run: npm run test
         - uses: actions/upload-artifact@v4
           if: always()
           with:
-            name: playwright-report
+            name: playwright-report-clockout
             path: playwright-report/
             retention-days: 1
