--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,6 +1,5 @@
 name: Automate Clockin Clockout
 on:
-  workflow_dispatch:
   schedule:
     - cron: '*/5 * * * *'
     # - cron: '25 08 * * 1-5'
@@ -9,6 +8,12 @@ on:
     branches: [ main ]
           
 jobs:
+  test_schedule:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Every Minutes
+        if: github.event.schedule == '*/5 * * * *'
+        run: echo "This step will always run"
   # clockin:
   #   timeout-minutes: 60
   #   runs-on: ubuntu-latest
@@ -35,29 +40,29 @@ jobs:
   #       name: playwright-report-clockin
   #       path: playwright-report/
   #       retention-days: 1
-  clockout:
-    timeout-minutes: 60
-    runs-on: ubuntu-latest
-    steps:
-        - uses: actions/checkout@v4
-        - uses: actions/setup-node@v4
-          if: github.events.schedule == '*/5 * * * *'
-          with:
-            node-version: lts/*
-        - name: create .env file
-          run: |
-              touch .env
-              echo "${{ secrets.ENV }}" > .env
-              cat .env
-        - name: Install dependencies
-          run: npm ci
-        - name: Install Playwright Browsers
-          run: npx playwright install --with-deps
-        - name: Run clockout
-          run: npm run test
-        - uses: actions/upload-artifact@v4
-          if: always()
-          with:
-            name: playwright-report-clockout
-            path: playwright-report/
+  # clockout:
+  #   timeout-minutes: 60
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #       - uses: actions/checkout@v4
+  #       - uses: actions/setup-node@v4
+  #         if: github.events.schedule == '*/5 * * * *'
+  #         with:
+  #           node-version: lts/*
+  #       - name: create .env file
+  #         run: |
+  #             touch .env
+  #             echo "${{ secrets.ENV }}" > .env
+  #             cat .env
+  #       - name: Install dependencies
+  #         run: npm ci
+  #       - name: Install Playwright Browsers
+  #         run: npx playwright install --with-deps
+  #       - name: Run clockout
+  #         run: npm run clockout
+  #       - uses: actions/upload-artifact@v4
+  #         if: always()
+  #         with:
+  #           name: playwright-report-clockout
+  #           path: playwright-report/
             retention-days: 1
