--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -65,4 +65,4 @@ jobs:
   #         with:
   #           name: playwright-report-clockout
   #           path: playwright-report/
-            retention-days: 1
+  #           retention-days: 1
