--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,7 +1,7 @@
 name: Automate Clockin Clockout
-on:
-  schedule:
-    - cron: '*/5 * * * *'
+# on:
+  # schedule:
+    # - cron: '*/5 * * * *'
     # - cron: '25 08 * * 1-5'
           
 jobs:
