--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,8 +1,11 @@
 name: Automate Clockin Clockout
-on
-  # schedule:
+on:
+  schedule:
     # - cron: '*/5 * * * *'
     # - cron: '25 08 * * 1-5'
+    # - cron: '01 17 * * 1-5'
+  push:
+    branches: [ main ]
           
 jobs:
   test_schedule:
