--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,68 +1,67 @@
 name: Automate Clockin Clockout
 on:
-  # schedule:
-    # - cron: '*/5 * * * *'
-    # - cron: '25 08 * * 1-5'
-    # - cron: '01 17 * * 1-5'
-  push:
-    branches: [ main ]
+  schedule:
+    - cron: '25 01 * * 1-5'
+    - cron: '01 10 * * 1-5'
+  # push:
+  #   branches: [ main ]
           
 jobs:
-  test_schedule:
+  # test_schedule:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Every Minutes
+  #       if: github.event.schedule == '*/5 * * * *'
+  #       run: echo "This step will always run"
+  clockin:
+    timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
-      - name: Every Minutes
-        if: github.event.schedule == '*/5 * * * *'
-        run: echo "This step will always run"
-  # clockin:
-  #   timeout-minutes: 60
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - uses: actions/checkout@v4
-  #   - uses: actions/setup-node@v4
-  #     # if: github.events.schedule == '25 08 * * 1-5'
-  #     with:
-  #       node-version: lts/*
-  #   - name: create .env file
-  #     run: |
-  #         touch .env
-  #         echo "${{ secrets.ENV }}" > .env
-  #         cat .env
-  #   - name: Install dependencies
-  #     run: npm ci
-  #   - name: Install Playwright Browsers
-  #     run: npx playwright install --with-deps
-  #   - name: Run clockin
-  #     run: npm run clockin
-  #   - uses: actions/upload-artifact@v4
-  #     if: always()
-  #     with:
-  #       name: playwright-report-clockin
-  #       path: playwright-report/
-  #       retention-days: 1
-  # clockout:
-  #   timeout-minutes: 60
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #       - uses: actions/checkout@v4
-  #       - uses: actions/setup-node@v4
-  #         if: github.events.schedule == '*/5 * * * *'
-  #         with:
-  #           node-version: lts/*
-  #       - name: create .env file
-  #         run: |
-  #             touch .env
-  #             echo "${{ secrets.ENV }}" > .env
-  #             cat .env
-  #       - name: Install dependencies
-  #         run: npm ci
-  #       - name: Install Playwright Browsers
-  #         run: npx playwright install --with-deps
-  #       - name: Run clockout
-  #         run: npm run clockout
-  #       - uses: actions/upload-artifact@v4
-  #         if: always()
-  #         with:
-  #           name: playwright-report-clockout
-  #           path: playwright-report/
-  #           retention-days: 1
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+      if: github.events.schedule == '25 01 * * 1-5'
+      with:
+        node-version: lts/*
+    - name: create .env file
+      run: |
+          touch .env
+          echo "${{ secrets.ENV }}" > .env
+          cat .env
+    - name: Install dependencies
+      run: npm ci
+    - name: Install Playwright Browsers
+      run: npx playwright install --with-deps
+    - name: Run clockin
+      run: npm run clockin
+    - uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: playwright-report-clockin
+        path: playwright-report/
+        retention-days: 1
+  clockout:
+    timeout-minutes: 60
+    runs-on: ubuntu-latest
+    steps:
+        - uses: actions/checkout@v4
+        - uses: actions/setup-node@v4
+          if: github.events.schedule == '01 10 * * 1-5'
+          with:
+            node-version: lts/*
+        - name: create .env file
+          run: |
+              touch .env
+              echo "${{ secrets.ENV }}" > .env
+              cat .env
+        - name: Install dependencies
+          run: npm ci
+        - name: Install Playwright Browsers
+          run: npx playwright install --with-deps
+        - name: Run clockout
+          run: npm run clockout
+        - uses: actions/upload-artifact@v4
+          if: always()
+          with:
+            name: playwright-report-clockout
+            path: playwright-report/
+            retention-days: 1
