--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -3,8 +3,8 @@ on:
   schedule:
     - cron: '43 01 * * 1-4'
     - cron: '01 10 * * 1-4'
-  push:
-    branches: [ main ]
+  # push:
+  #   branches: [ main ]
           
 jobs:
   # test_schedule:
