--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -2,66 +2,66 @@ name: Automate Clockin Clockout
 on:
   schedule:
     - cron: '47 01 * * 0-4'
-    - cron: '01 10 * * 1-4'
+    - cron: '01 10 * * 0-4'
   # push:
   #   branches: [ main ]
           
 jobs:
-  # test_schedule:
+  test_schedule:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Every Minutes
+        if: github.event.schedule == '51 01 * * 1-4'
+        run: echo "This step will always run"
+  # clockin:
+  #   timeout-minutes: 60
   #   runs-on: ubuntu-latest
   #   steps:
-  #     - name: Every Minutes
-  #       if: github.event.schedule == '45 01 * * 0-4'
-  #       run: echo "This step will always run"
-  clockin:
-    timeout-minutes: 60
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-node@v4
-      if: github.event.schedule == '47 01 * * 0-4'
-      with:
-        node-version: lts/*
-    - name: create .env file
-      run: |
-          touch .env
-          echo "${{ secrets.ENV }}" > .env
-          cat .env
-    - name: Install dependencies
-      run: npm ci
-    - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
-    - name: Run clockin
-      run: npm run clockin
-    - uses: actions/upload-artifact@v4
-      if: always()
-      with:
-        name: playwright-report-clockin
-        path: playwright-report/
-        retention-days: 1
-  clockout:
-    timeout-minutes: 60
-    runs-on: ubuntu-latest
-    steps:
-        - uses: actions/checkout@v4
-        - uses: actions/setup-node@v4
-          if: github.event.schedule == '01 10 * * 0-4'
-          with:
-            node-version: lts/*
-        - name: create .env file
-          run: |
-              touch .env
-              echo "${{ secrets.ENV }}" > .env
-              cat .env
-        - name: Install dependencies
-          run: npm ci
-        - name: Install Playwright Browsers
-          run: npx playwright install --with-deps
-        - name: Run clockout
-          run: npm run clockout
-        - uses: actions/upload-artifact@v4
-          if: always()
-          with:
-            name: playwright-report-clockout
-            path: playwright-report/
-            retention-days: 1
+  #   - uses: actions/checkout@v4
+  #   - uses: actions/setup-node@v4
+  #     if: github.event.schedule == '47 01 * * 0-4'
+  #     with:
+  #       node-version: lts/*
+  #   - name: create .env file
+  #     run: |
+  #         touch .env
+  #         echo "${{ secrets.ENV }}" > .env
+  #         cat .env
+  #   - name: Install dependencies
+  #     run: npm ci
+  #   - name: Install Playwright Browsers
+  #     run: npx playwright install --with-deps
+  #   - name: Run clockin
+  #     run: npm run clockin
+  #   - uses: actions/upload-artifact@v4
+  #     if: always()
+  #     with:
+  #       name: playwright-report-clockin
+  #       path: playwright-report/
+  #       retention-days: 1
+  # clockout:
+  #   timeout-minutes: 60
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #       - uses: actions/checkout@v4
+  #       - uses: actions/setup-node@v4
+  #         if: github.event.schedule == '01 10 * * 0-4'
+  #         with:
+  #           node-version: lts/*
+  #       - name: create .env file
+  #         run: |
+  #             touch .env
+  #             echo "${{ secrets.ENV }}" > .env
+  #             cat .env
+  #       - name: Install dependencies
+  #         run: npm ci
+  #       - name: Install Playwright Browsers
+  #         run: npx playwright install --with-deps
+  #       - name: Run clockout
+  #         run: npm run clockout
+  #       - uses: actions/upload-artifact@v4
+  #         if: always()
+  #         with:
+  #           name: playwright-report-clockout
+  #           path: playwright-report/
+  #           retention-days: 1
