--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,18 +1,18 @@
 name: Automate Clockin Clockout
 on:
   schedule:
-    - cron: '35 08 * * 1-5'
+    - cron: '25 01 * * 1-5'
     - cron: '30 10 * * 1-5'
   # push:
   #   branches: [ main ]
           
 jobs:
-  test_schedule:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Every Minutes
-        if: github.event.schedule == '35 08 * * 1-5'
-        run: echo "This step will always run 10 08 * * 1-5"
+  # test_schedule:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Every Minutes
+  #       if: github.event.schedule == '35 08 * * 1-5'
+  #       run: echo "This step will always run 10 08 * * 1-5"
   clockin:
     timeout-minutes: 60
     runs-on: ubuntu-latest
